--- a/RestoranClient/Login.xaml
+++ b/RestoranClient/Login.xaml
@@ -26,7 +26,7 @@
         <Label Margin="5" Grid.Row="1">Password</Label>
         <ComboBox Height="20" Grid.Column="1" Margin="5" x:Name="waitersCB"  DisplayMemberPath="name" SelectedValuePath="id" SelectedValue="{Binding ElementName=userControl, Path=WaiterId}"/>
             <StackPanel Grid.Row="1" Grid.Column="1" Margin="5" VerticalAlignment="Center">
-                <PasswordBox Height="20" x:Name="passwordPB" GotFocus="passwordPB_GotFocus"  />
+                <PasswordBox Height="20" x:Name="passwordPB" GotFocus="passwordPB_GotFocus" KeyDown="passwordPB_KeyDown"  />
                 <TextBlock Visibility="Collapsed" x:Name="errorBlock" Background="Aqua" Foreground="Red" TextAlignment="Center" ><Italic> Пароль введено неправильно, спробуйте ще.</Italic></TextBlock>
             </StackPanel>
         </Grid>
