--- a/RestoranClient/OrderEdit.xaml
+++ b/RestoranClient/OrderEdit.xaml
@@ -4,6 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RestoranClient"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid x:Name="orderEdit">
@@ -20,9 +28,9 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-            <Button Template="{StaticResource RoundedButtonTemplate}" Click="SaveOrder">Записати</Button>
-            <Button Template="{StaticResource RoundedButtonTemplate}" Grid.Column="1" Click="CancelOrder">Відмовитись</Button>
-            <Grid Grid.Row="1">
+            <Button Background="{DynamicResource MaterialDesignBody}" materialDesign:ButtonAssist.CornerRadius="5" materialDesign:ShadowAssist.ShadowDepth="Depth1" Margin="5" Click="SaveOrder">Записати</Button>
+            <Button Background="{DynamicResource MaterialDesignBodyLight}" Margin="5" materialDesign:ButtonAssist.CornerRadius="5" Grid.Column="1" materialDesign:ShadowAssist.ShadowDepth="Depth1" Click="CancelOrder">Відмовитись</Button>
+            <Grid Grid.Row="1" Margin="0 0 20 0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -31,9 +39,9 @@
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Label>Столик</Label>
+                <Label Margin="0 0 20 0" FontSize="15" FontWeight="Bold">Столик</Label>
                 <ComboBox Grid.Column="1" x:Name="cbAbonent" DisplayMemberPath = "Name" SelectedValuePath = "Id" />
-                <Label Grid.Row="1">Звідки</Label>
+                <Label Margin="0 0 20 0" FontSize="15" FontWeight="Bold" Grid.Row="1">Звідки</Label>
                 <ComboBox Grid.Row="1" Grid.Column="1" x:Name="cbSource" />
 
             </Grid>
@@ -48,9 +56,9 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <Label>з</Label>
+                <Label FontSize="15px" FontWeight="Bold">з</Label>
                 <TextBox Grid.Column="1" x:Name="dpStart" IsEnabled="False"/>
-                <Label Grid.Column="2">по</Label>
+                <Label Grid.Column="2" FontSize="15px" FontWeight="Bold">по</Label>
                 <TextBox Grid.Column="3" x:Name="dpEnd" IsEnabled="False"/>
             </Grid>
         </Grid>
