--- a/RestoranClient/MainWindow.xaml
+++ b/RestoranClient/MainWindow.xaml
@@ -5,7 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RestoranClient"
         mc:Ignorable="d"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -14,12 +13,12 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title = "Клієнт офіціанта" Height="450" WindowStyle="ThreeDBorderWindow" Width="800" MinHeight="450" MinWidth="500" Loaded="Window_Loaded" Background="{StaticResource MaterialDesignBackground}" Icon="C:\Users\pokri\Source\Repos\sabatex\Restoran\RestoranClient\favicon.ico">
     <Grid>
-        <materialDesign:Card x:Name="logo" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="5" Margin="0 5">
+        <Label x:Name="logo" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="5" Margin="0 5">
             <StackPanel>
                 <Image Height="40" Source="C:\Users\pokri\Source\Repos\sabatex\Restoran\RestoranClient\favicon.ico"></Image>
-                <TextBox FontSize="20px" FontWeight="Bold">Restoran Client App</TextBox>
+                <TextBlock FontSize="20px" FontWeight="Bold">Restoran Client App</TextBlock>
             </StackPanel>
-        </materialDesign:Card>
+        </Label>
         <local:Login x:Name="login" HorizontalAlignment="Center" BorderBrush="AliceBlue"  Width="400" VerticalAlignment="Center" Background="{StaticResource MaterialDesignBackground}" LoginResult="Login_LoginResult"/>
         <Grid x:Name="mainForm" Visibility="Collapsed">
         <Grid.RowDefinitions>
